--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "json-server-api",
   "version": "1.0.0",
   "description": "Simple Fake API",
-  "main": "main.js",
+  "main": "server.js",
   "scripts": {
     "start": "json-server --watch ./database.json",
     "start-auth": "node server.js"
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "json-server": "^0.14.2",
-    "jsonwebtoken": "^8.1.0"
+    "faker": "^5.5.3",
+    "json-server": "^0.16.3",
+    "jsonwebtoken": "^8.5.1"
   }
 }
